Minor Java17 updates